--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@emotion/styled": "^11.14.0",
     "enquire.js": "^2.1.6",
+    "framer-motion": "^12.6.2",
+    "gsap": "^3.12.7",
     "next": "15.2.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
