--- a/.prettierrc
+++ b/.prettierrc
@@ -11,6 +11,5 @@
   "jsxSingleQuote": true,
   "proseWrap": "preserve",
   "quoteProps": "consistent",
-  "singleAttributePerLine": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "singleAttributePerLine": true
 }
